Moved to parallel Vector and Matrix.  In the middle of testing Matrix

--- a/src/linear_algebra/CMakeLists.txt
+++ b/src/linear_algebra/CMakeLists.txt
@@ -9,6 +9,8 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 #-------------------------------------#
 
 SET(SRC
+    MatrixBase.cc
+    Matrix.cc
     Vector.cc
 )
 
