Completed basic Detran node factory

--- a/src/erme_geometry/CMakeLists.txt
+++ b/src/erme_geometry/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(SRC
     Node.cc
     CartesianNode.cc
     CartesianNodeDetran.cc
+    NodeFactoryDetran.cc
 )
 
 #-------------------------------------#
