Initial parallel structures in place for geometry

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,13 @@
 INCLUDE_DIRECTORIES(linear_algebra)
 INCLUDE_DIRECTORIES(comm)
 INCLUDE_DIRECTORIES(erme_geometry)
+INCLUDE_DIRECTORIES(erme_response)
+INCLUDE_DIRECTORIES(erme)
 
 # Source subdirectories.
 ADD_SUBDIRECTORY(linear_algebra)
 ADD_SUBDIRECTORY(comm)
 ADD_SUBDIRECTORY(erme_geometry)
+ADD_SUBDIRECTORY(erme_response)
+ADD_SUBDIRECTORY(erme)
 
