--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,44 @@
 #-------------------------------------------------------------------------------
-# serment/CMakeLists.txt
-#
-# Note, this file was based in part on S. Johnson's PyTRT's CMake-based build
-# system, which, like the rest of the code, is quite nicely written.
+# Serment CMake Configuration
 #-------------------------------------------------------------------------------
 
+#------------------------------------------------------------------------------#
+# PROJECT
+#------------------------------------------------------------------------------#
 
-##===========================================================================##
-## PROJECT                                                                   ##
-##===========================================================================##
-
-project( SERMENT )
+project(Serment)
 cmake_minimum_required( VERSION 2.6 FATAL_ERROR )
 set(SERMENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
+#------------------------------------------------------------------------------#
+# VERSION
+#------------------------------------------------------------------------------#
 
-##===========================================================================##
-## VERSION                                                                   ##
-##===========================================================================##
-
-set( VERSION_MAJOR 0 )
-set( VERSION_MINOR 1 )
+set( VERSION_MAJOR 1 )
+set( VERSION_MINOR 0 )
 set( VERSION_PATCH_LEVEL 0 )
 message( 
 "++ SERMENT version ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH_LEVEL}" 
 )
 
+#------------------------------------------------------------------------------#
+# CMAKE MODULES
+#------------------------------------------------------------------------------#
 
-##===========================================================================##
-## CMAKE MODULES                                                             ##
-##===========================================================================##
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/tools/CMake")
 
-# CMake files included with SERMENT
-LIST( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/tools/CMake" )
-
-
-##===========================================================================##
-## USER OPTIONS                                                              ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# USER OPTIONS
+#------------------------------------------------------------------------------#
 
 # Set the default build type (debug)
-if( NOT CMAKE_BUILD_TYPE)
-    set( CMAKE_BUILD_TYPE Debug CACHE STRING
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug CACHE STRING
         "Choose the type of build, options are: Debug Release." FORCE)
 endif()
 
 # Options for DBC macros.  For now, all on or all off.  Note, there *is* a
-#   performance hit for having it on!
+# performance hit for having it on!
 set( SERMENT_ENABLE_DBC YES CACHE BOOL "Enable design by contract macros.")
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     if(SERMENT_ENABLE_DBC)
@@ -55,21 +47,31 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
 endif()
 
 # Other build options.
-set( SERMENT_ENABLE_DEBUG     YES CACHE BOOL  "Enable diagonostic print outs."                   )
-set( SERMENT_ENABLE_TEST      NO CACHE BOOL  "Enable testing."                                   )
-set( SERMENT_BUILD_ERME       YES CACHE BOOL  "Build eigenvalue response matrix equation solver.")
-set( SERMENT_BUILD_DIFF2D     YES CACHE BOOL  "Build two dimensional diffusion solver."          )
+set(SERMENT_ENABLE_DEBUG  YES CACHE BOOL  
+    "Enable diagonostic print outs.")
+set(SERMENT_ENABLE_TEST    NO CACHE BOOL  
+    "Enable testing.")
+set(SERMENT_BUILD_ERME    YES CACHE BOOL  
+    "Build eigenvalue response matrix equation solver.")
+set(SERMENT_BUILD_DIFF2D  YES CACHE BOOL  
+    "Build two dimensional diffusion solver.")
 
 # Options for using external libraries.
-set(SERMENT_ENABLE_PETSC      YES CACHE BOOL  "Use PETSc solvers and datatypes."                 )
-set(SERMENT_ENABLE_SLEPC      YES CACHE BOOL  "Use SLEPc solvers and datatypes."                 )
-set( SERMENT_ENABLE_SILO      YES CACHE BOOL  "Use the Silo library for data i/o."               )
-set( SERMENT_ENABLE_XML       YES CACHE BOOL  "Use the libxml2 library for input."               )
-set( SERMENT_ENABLE_MPI       NO CACHE BOOL   "Enable MPI. (not used)"                           )
-set( SERMENT_ENABLE_OPENMP    NO CACHE BOOL   "Enable OpenMP. (not used)"                        )
+set(SERMENT_ENABLE_PETSC  YES CACHE BOOL  
+    "Use PETSc solvers and datatypes.")
+set(SERMENT_ENABLE_SLEPC  YES CACHE BOOL  
+    "Use SLEPc solvers and datatypes.")
+set(SERMENT_ENABLE_SILO   YES CACHE BOOL  
+    "Use the Silo library for data i/o.")
+set(SERMENT_ENABLE_XML    YES CACHE BOOL  
+    "Use the libxml2 library for input.")
+set(SERMENT_ENABLE_MPI     NO CACHE BOOL  
+    "Enable MPI.")
+set(SERMENT_ENABLE_BOOST   NO CACHE BOOL  
+    "Enable Boost.")
 
 # PETSc is essential for most things...
-if( NOT SERMENT_ENABLE_PETSC )
+if(NOT SERMENT_ENABLE_PETSC)
   if( SERMENT_BUILD_ERME OR SERMENT_BUILD_DIFF2D )
     message( FATAL_ERROR "You must enable PETSc for ERME and DIFF2D." )
   endif()
@@ -80,28 +82,28 @@ endif()
 ## EXTERNAL LIBRARIES                                                        ##
 ##===========================================================================##
 
-# Detran
+# Detran (required)
 find_package(Detran REQUIRED)
 include_directories(${Detran_INCLUDE_DIR})
 message("Detran library = ${Detran_LIBRARIES}")
 
-# PETSc
+# PETSc (required)
 if(SERMENT_ENABLE_PETSC)
-    find_package(PETSc REQUIRED)
-    include_directories(${PETSC_INCLUDES})
-    add_definitions(${PETSC_DEFINITIONS})
+  find_package(PETSc REQUIRED)
+  include_directories(${PETSC_INCLUDES})
+  add_definitions(${PETSC_DEFINITIONS})
 endif()
 
 # SLEPc (optional)
 if(SERMENT_ENABLE_SLEPC)
-    find_package(SLEPc REQUIRED)
-    if(HAVE_SLEPC)
-        include_directories(${SLEPC_INCLUDES})
-    else()
-        set( SERMENT_ENABLE_SLEPC OFF )
-        message( STATUS "Disabling SLEPc since it was not found.  Try setting
-                 the environment variable SLEPC_DIR." )
-    endif()
+  find_package(SLEPc REQUIRED)
+  if(HAVE_SLEPC)
+    include_directories(${SLEPC_INCLUDES})
+  else()
+    set(SERMENT_ENABLE_SLEPC OFF)
+    message(STATUS "Disabling SLEPc since it was not found.  Try setting
+            the environment variable SLEPC_DIR." )
+  endif()
 endif()
 
 if(SERMENT_ENABLE_SILO)
@@ -125,14 +127,24 @@ if(SERMENT_ENABLE_MPI)
   include_directories(${MPI_INCLUDE_PATH})
 endif()
 
-if(SERMENT_ENABLE_OPENMP)
-  find_package(OpenMP REQUIRED)
+if(SERMENT_ENABLE_BOOST)
+  set(Boost_USE_STATIC_LIBS OFF)
+  set(Boost_USE_MULTITHREAD OFF)
+  set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0")
+  find_package(Boost 1.50 COMPONENTS serialization)
+  if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+  else(Boost_FOUND)
+    set( DETRAN_ENABLE_BOOST OFF )
+    message( STATUS "Disabling Boost since it was not found." )
+    set(Boost_LIBRARIES "")
+    set(Boost_INCLUDE_DIRS "")
+  endif(Boost_FOUND)
 endif()
 
-
-##===========================================================================##
-## CONFIGURATION                                                             ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# CONFIGURATION
+#------------------------------------------------------------------------------#
 
 # Write config file, install it, and include that directory for all source
 set( SERMENT_CONFIG_IN  "${CMAKE_CURRENT_SOURCE_DIR}/serment_config.h.in" )
@@ -141,9 +153,9 @@ configure_file( ${SERMENT_CONFIG_IN} ${SERMENT_CONFIG_OUT} )
 include_directories( "${PROJECT_BINARY_DIR}/config" )
 
 
-##===========================================================================##
-## TESTING                                                                   ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# TESTING
+#------------------------------------------------------------------------------#
 
 option( USE_TESTING "Build testing" OFF )
 if ( SERMENT_ENABLE_TEST )
@@ -186,18 +198,16 @@ if ( SERMENT_ENABLE_TEST )
     include_directories(src/linear_algebra/test)
 endif()
 
-
-##===========================================================================##
-## SOURCE                                                                    ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# SOURCE
+#------------------------------------------------------------------------------#
 
 include_directories( src )
 add_subdirectory( src )
 
-
-##===========================================================================##
-## INSTALL                                                                    ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# INSTALL
+#------------------------------------------------------------------------------#
 
 if( NOT CMAKE_INSTALL_PREFIX)
   set( CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR} CACHE STRING
@@ -205,55 +215,53 @@ if( NOT CMAKE_INSTALL_PREFIX)
        FORCE)
 endif()
 
-##===========================================================================##
-## SOME DIAGNOSTIC OUTPUT                                                    ##
-##===========================================================================##
+#------------------------------------------------------------------------------#
+# OUTPUT
+#------------------------------------------------------------------------------#
 
+message(" ")
+message("---------------------------------------------------------------")
+message("              SUMMARY OF CMAKE CONFIGURATION")
+
+
+message("---------------------------------------------------------------")
 message("++++ System:      ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}")
 message("++++ CXX:         ${CMAKE_CXX_COMPILER}")
 message("++++ Build type:  ${CMAKE_BUILD_TYPE}")
+message("++++ Install:     ${CMAKE_INSTALL_PREFIX}")
+
+message("---------------------------------------------------------------")
 
 if(SERMENT_ENABLE_DBC)
-  message("++++++ DBC enabled")
+  message("++++++ DBC:    enabled")
 else()
-  message("++++++ DBC DISABLED")
+  message("++++++ DBC:    disabled")
 endif()
 
 if(SERMENT_ENABLE_PETSC)
-  message("++++++ PETSc enabled")
+  message("++++++ PETSc:  enabled")
 else()
-  message("++++++ PETSc DISABLED")
+  message("++++++ PETSc:  disabled")
 endif()
 if(SERMENT_ENABLE_SLEPC)
-  message("++++++ SLEPc enabled")
+  message("++++++ SLEPc:  enabled")
 else()
-  message("++++++ SLEPc DISABLED")
+  message("++++++ SLEPc:  disabled")
 endif()
 if(SERMENT_ENABLE_SILO)
-  message("++++++ Silo enabled")
+  message("++++++ Silo:   enabled")
 else()
-  message("++++++ Silo DISABLED")
+  message("++++++ Silo:   disabled")
 endif()
 if(SERMENT_ENABLE_MPI)
-  message("++++++ MPI enabled")
+  message("++++++ MPI:    enabled")
 else()
-  message("++++++ MPI DISABLED")
+  message("++++++ MPI:    disabled")
 endif()
-if(SERMENT_ENABLE_OPENMP)
-  message("++++++ OpenMP enabled")
+if(SERMENT_ENABLE_BOOST)
+  message("++++++ Boost:  enabled")
 else()
-  message("++++++ OpenMP DISABLED")
+  message("++++++ Boost:  disabled")
 endif()
-
-if(NOT SERMENT_BUILD_ERME)
-  message("++++++ erme DISABLED")
-endif()
-if(NOT SERMENT_BUILD_DIFF2D)
-  message("++++++ diff2d DISABLED")
-endif()
-if(NOT SERMENT_BUILD_SLABTRAN)
-  message("++++++ slabtran DISABLED")
-endif()
-
 
 
