Fixed Comm global reductions tested indexer; In the middle of reforming Node and its neighbor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,13 +130,13 @@ endif()
 if(SERMENT_ENABLE_BOOST)
   set(Boost_USE_STATIC_LIBS OFF)
   set(Boost_USE_MULTITHREAD OFF)
-  set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0")
+  set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0" "1.51" "1.51.0")
   find_package(Boost 1.50 COMPONENTS serialization)
   if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
   else(Boost_FOUND)
-    set( DETRAN_ENABLE_BOOST OFF )
-    message( STATUS "Disabling Boost since it was not found." )
+    set(SERMENT_ENABLE_BOOST OFF)
+    message(STATUS "Disabling Boost since it was not found.")
     set(Boost_LIBRARIES "")
     set(Boost_INCLUDE_DIRS "")
   endif(Boost_FOUND)
