--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -8,11 +8,11 @@ message( "++ Adding erme_response tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
-#ADD_EXECUTABLE(test_StateERME			test_StateERME.cc)
-#TARGET_LINK_LIBRARIES(test_StateERME 	erme)
+ADD_EXECUTABLE(test_ResponseIndexer	           test_ResponseIndexer.cc)
+TARGET_LINK_LIBRARIES(test_ResponseIndexer     erme_response)
 
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
 
-#ADD_TEST(test_StateERME test_StateERME 0)
+ADD_TEST(test_ResponseIndexer test_ResponseIndexer 0)
