Changed indexing interface.  More flexibility might still be useful.

--- a/src/erme/test/CMakeLists.txt
+++ b/src/erme/test/CMakeLists.txt
@@ -11,6 +11,10 @@ message( "++ Adding serment erme tests." )
 ADD_EXECUTABLE(test_StateERME			test_StateERME.cc)
 TARGET_LINK_LIBRARIES(test_StateERME 	erme)
 
+ADD_EXECUTABLE(test_Connect 			test_Connect.cc)
+TARGET_LINK_LIBRARIES(test_Connect  	erme)
+
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
