Stub server and source class; started to remove old source

--- a/src/erme/test/CMakeLists.txt
+++ b/src/erme/test/CMakeLists.txt
@@ -20,3 +20,4 @@ TARGET_LINK_LIBRARIES(test_Connect  	erme)
 #------------------------------------------------------------------------------#
 
 ADD_TEST(test_StateERME test_StateERME 0)
+ADD_TEST(test_Connect   test_Connect 0)
