--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -11,8 +11,12 @@ message( "++ Adding erme_response tests." )
 ADD_EXECUTABLE(test_ResponseIndexer	           test_ResponseIndexer.cc)
 TARGET_LINK_LIBRARIES(test_ResponseIndexer     erme_response)
 
+ADD_EXECUTABLE(test_NodeResponse	           test_NodeResponse.cc)
+TARGET_LINK_LIBRARIES(test_NodeResponse     erme_response)
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
 
-ADD_TEST(test_ResponseIndexer test_ResponseIndexer 0)
+ADD_TEST(test_ResponseIndexer 	test_ResponseIndexer 0)
+ADD_TEST(test_NodeResponse 		test_NodeResponse 0)
