Added communicator constructors for local and global levels.

--- a/src/comm/test/CMakeLists.txt
+++ b/src/comm/test/CMakeLists.txt
@@ -14,6 +14,9 @@ TARGET_LINK_LIBRARIES(test_PingPong         serment_comm)
 ADD_EXECUTABLE(test_GlobalReduction         test_GlobalReduction.cc)
 TARGET_LINK_LIBRARIES(test_GlobalReduction  serment_comm)
 
+ADD_EXECUTABLE(test_Communicator            test_Communicator.cc)
+TARGET_LINK_LIBRARIES(test_Communicator     serment_comm)
+
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
@@ -23,3 +26,5 @@ ADD_TEST(test_PingPong_bandwidth 	test_PingPong 0)
 ADD_TEST(test_PingPong_latency	 	test_PingPong 0)
 
 ADD_TEST(test_GlobalReduction       test_GlobalReduction 0)
+
+ADD_TEST(test_Communicator          test_Communicator 0)
