Added serve test case from which the implementation will be done.

--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -12,7 +12,10 @@ ADD_EXECUTABLE(test_ResponseIndexer	           test_ResponseIndexer.cc)
 TARGET_LINK_LIBRARIES(test_ResponseIndexer     erme_response)
 
 ADD_EXECUTABLE(test_NodeResponse	           test_NodeResponse.cc)
-TARGET_LINK_LIBRARIES(test_NodeResponse     erme_response)
+TARGET_LINK_LIBRARIES(test_NodeResponse        erme_response)
+
+ADD_EXECUTABLE(test_ResponseServer	           test_ResponseServer.cc)
+TARGET_LINK_LIBRARIES(test_ResponseServer      erme_response)
 
 #------------------------------------------------------------------------------#
 # Define tests
@@ -20,3 +23,4 @@ TARGET_LINK_LIBRARIES(test_NodeResponse     erme_response)
 
 ADD_TEST(test_ResponseIndexer 	test_ResponseIndexer 0)
 ADD_TEST(test_NodeResponse 		test_NodeResponse 0)
+ADD_TEST(test_ResponseServer 	test_ResponseServer 0)
