Added dummy nodes and corresponding response sources.  Response server is tested in serial using the simple work share scheme with the dummy node data.  Also put a stub utils directory in place with the start of a generic manager class

--- a/src/erme_geometry/CMakeLists.txt
+++ b/src/erme_geometry/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(SRC
     CartesianNodeDetran.cc
     NodeFactoryDetran.cc
     NodePartitioner.cc
+    DummyNode.cc
 )
 
 #-------------------------------------#
