--- a/src/erme_response/CMakeLists.txt
+++ b/src/erme_response/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(SRC
     ResponseIndexer.cc
     NodeResponse.cc
     ResponseServer.cc
+    ResponseSourceDummy.cc
 )
 
 #-------------------------------------#
