Renamed response index functions, and fixed local response index error.  Added setup function for linear algebra, since PETSc communicator should be global, not world.

--- a/src/erme/test/CMakeLists.txt
+++ b/src/erme/test/CMakeLists.txt
@@ -8,16 +8,19 @@ message( "++ Adding serment erme tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
-ADD_EXECUTABLE(test_StateERME			test_StateERME.cc)
-TARGET_LINK_LIBRARIES(test_StateERME 	erme)
+ADD_EXECUTABLE(test_StateERME				test_StateERME.cc)
+TARGET_LINK_LIBRARIES(test_StateERME 		erme)
 
-ADD_EXECUTABLE(test_Connect 			test_Connect.cc)
-TARGET_LINK_LIBRARIES(test_Connect  	erme)
+ADD_EXECUTABLE(test_Connect 				test_Connect.cc)
+TARGET_LINK_LIBRARIES(test_Connect  		erme)
 
+ADD_EXECUTABLE(test_ResponseMatrix	    	test_ResponseMatrix.cc)
+TARGET_LINK_LIBRARIES(test_ResponseMatrix 	erme)
 
 #------------------------------------------------------------------------------#
 # Define tests
 #------------------------------------------------------------------------------#
 
-ADD_TEST(test_StateERME test_StateERME 0)
-ADD_TEST(test_Connect   test_Connect 0)
+ADD_TEST(test_StateERME 		test_StateERME 0)
+ADD_TEST(test_Connect   		test_Connect 0)
+ADD_TEST(test_ResponseMatrix 	test_ResponseMatrix 0)
