Add F, A, and L operators.

--- a/src/erme/CMakeLists.txt
+++ b/src/erme/CMakeLists.txt
@@ -12,6 +12,8 @@ SET(SRC
     StateERME.cc
     Connect.cc
     ResponseMatrix.cc
+    FissionOperator.cc
+    AbsorptionOperator.cc
 )
 
 #-------------------------------------#
