Finished basic operator definitions with initial tests

--- a/src/erme/CMakeLists.txt
+++ b/src/erme/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(SRC
     ResponseMatrix.cc
     FissionOperator.cc
     AbsorptionOperator.cc
+    LeakageOperator.cc
 )
 
 #-------------------------------------#
