--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ if(SERMENT_ENABLE_BOOST)
   set(Boost_USE_STATIC_LIBS OFF)
   set(Boost_USE_MULTITHREAD OFF)
   set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0" "1.51" "1.51.0")
-  find_package(Boost 1.50 COMPONENTS serialization)
+  find_package(Boost 1.50 COMPONENTS serialization program_options)
   if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
   else(Boost_FOUND)
