--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,42 +37,18 @@ if(NOT CMAKE_BUILD_TYPE)
         "Choose the type of build, options are: Debug Release." FORCE)
 endif()
 
-# Options for DBC macros.  For now, all on or all off.  Note, there *is* a
-# performance hit for having it on!
-set( SERMENT_ENABLE_DBC YES CACHE BOOL "Enable design by contract macros.")
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    if(SERMENT_ENABLE_DBC)
-        message("WARNING: using DBC macros with Release configuration!")
-    endif()
-endif()
-
 # Other build options.
-set(SERMENT_ENABLE_DEBUG  YES CACHE BOOL  
-    "Enable diagonostic print outs.")
 set(SERMENT_ENABLE_TEST    NO CACHE BOOL  
     "Enable testing.")
-set(SERMENT_BUILD_ERME    YES CACHE BOOL  
-    "Build eigenvalue response matrix equation solver.")
-set(SERMENT_BUILD_DIFF2D  YES CACHE BOOL  
-    "Build two dimensional diffusion solver.")
-
 # Options for using external libraries.
-set(SERMENT_ENABLE_PETSC  YES CACHE BOOL  
-    "Use PETSc solvers and datatypes.")
-set(SERMENT_ENABLE_SLEPC  YES CACHE BOOL  
-    "Use SLEPc solvers and datatypes.")
-set(SERMENT_ENABLE_SILO   YES CACHE BOOL  
-    "Use the Silo library for data i/o.")
-set(SERMENT_ENABLE_XML    YES CACHE BOOL  
-    "Use the libxml2 library for input.")
+set(SERMENT_ENABLE_HDF5    NO CACHE BOOL
+    "Enable HDF5.")
 set(SERMENT_ENABLE_MPI     NO CACHE BOOL  
     "Enable MPI.")
-set(SERMENT_ENABLE_BOOST   NO CACHE BOOL  
-    "Enable Boost.")
 
 # PETSc is essential for most things...
 if(NOT SERMENT_ENABLE_PETSC)
-  if( SERMENT_BUILD_ERME OR SERMENT_BUILD_DIFF2D )
+  if(SERMENT_BUILD_ERME OR SERMENT_BUILD_DIFF2D)
     message( FATAL_ERROR "You must enable PETSc for ERME and DIFF2D." )
   endif()
 endif()
@@ -87,60 +63,53 @@ find_package(Detran REQUIRED)
 include_directories(${Detran_INCLUDE_DIR})
 message("Detran library = ${Detran_LIBRARIES}")
 
-# PETSc (required, for now; other linalg packages would be great)
-if(SERMENT_ENABLE_PETSC)
-  find_package(PETSc REQUIRED)
-  include_directories(${PETSC_INCLUDES})
-  add_definitions(${PETSC_DEFINITIONS})
-endif()
+# PETSc (required)
+find_package(PETSc REQUIRED)
+include_directories(${PETSC_INCLUDES})
+add_definitions(${PETSC_DEFINITIONS})
 
-# SLEPc (optional, but precludes use of nice eigensolvers)
-if(SERMENT_ENABLE_SLEPC)
-  find_package(SLEPc REQUIRED)
-  if(HAVE_SLEPC)
-    include_directories(${SLEPC_INCLUDES})
+# SLEPc (required)
+find_package(SLEPc REQUIRED)
+include_directories(${SLEPC_INCLUDES})
+
+# Boost (required)
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREAD OFF)
+set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0" "1.51" "1.51.0")
+find_package(Boost 1.50 COMPONENTS serialization program_options REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
+
+# HDF5 (optional)
+if(SERMENT_ENABLE_HDF5)
+  find_package(HDF5)
+  if(HDF5_FOUND)
+    include_directories(${HDF5_INCLUDE_DIR})
   else()
-    set(SERMENT_ENABLE_SLEPC OFF)
-    message(STATUS "Disabling SLEPc since it was not found.  Try setting
-            the environment variable SLEPC_DIR." )
+    set(SERMENT_ENABLE_HDF5 OFF)
+    message(STATUS "Disabling HDF5 since it was not found.")
+    # Need to reset them, since FindHDF5 fills them with "not founds", 
+    # which leads to errors downstream.
+    set(HDF5_LIBRARIES "")
+    set(HDF_INCLUDE_DIR "")
   endif()
 endif()
 
-if(SERMENT_ENABLE_SILO)
-    find_package(Silo)
-    if(SILO_FOUND)
-        include_directories(${Silo_INCLUDE_DIR})
-    else()
-        set( SERMENT_ENABLE_SILO OFF )
-        MESSAGE( STATUS "Disabling Silo since it was not found." )
-    endif()
-endif()
-
-if(SERMENT_ENABLE_XML)
-    find_package(LibXml2 REQUIRED)
-    include_directories(${LIBXML2_INCLUDE_DIR} )
-    add_definitions(${LIBXML2_DEFINITIONS})
-endif()
-
+# MPI (optional)
 if(SERMENT_ENABLE_MPI)
   find_package(MPI REQUIRED)
-  include_directories(${MPI_INCLUDE_PATH})
+  if(MPI_FOUND)
+    include_directories(${MPI_INCLUDE_PATH})
+  else()
+    set(SERMENT_ENABLE_MPI OFF)
+    message(STATUS "Disabling MPI since it was not found.")
+    # Need to reset them, since FindHDF5 fills them with "not founds", 
+    # which leads to errors downstream.
+    set(MPI_LIBRARIES "")
+    set(MPI_INCLUDE_PATH "")
+  endif()
 endif()
 
-if(SERMENT_ENABLE_BOOST)
-  set(Boost_USE_STATIC_LIBS OFF)
-  set(Boost_USE_MULTITHREAD OFF)
-  set(Boost_ADDITIONAL_VERSIONS "1.50" "1.50.0" "1.51" "1.51.0")
-  find_package(Boost 1.50 COMPONENTS serialization program_options)
-  if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-  else(Boost_FOUND)
-    set(SERMENT_ENABLE_BOOST OFF)
-    message(STATUS "Disabling Boost since it was not found.")
-    set(Boost_LIBRARIES "")
-    set(Boost_INCLUDE_DIRS "")
-  endif(Boost_FOUND)
-endif()
+
 
 #------------------------------------------------------------------------------#
 # CONFIGURATION
@@ -229,39 +198,19 @@ message("++++ System:      ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}")
 message("++++ CXX:         ${CMAKE_CXX_COMPILER}")
 message("++++ Build type:  ${CMAKE_BUILD_TYPE}")
 message("++++ Install:     ${CMAKE_INSTALL_PREFIX}")
-
+message(" ")
 message("---------------------------------------------------------------")
-
+message("                      BUILD OPTIONS")
+message("---------------------------------------------------------------")
 if(SERMENT_ENABLE_DBC)
-  message("++++++ DBC:    enabled")
+  message("++++++ DBC:    enabled (because DBC in Detran is enabled)")
 else()
-  message("++++++ DBC:    disabled")
-endif()
-
-if(SERMENT_ENABLE_PETSC)
-  message("++++++ PETSc:  enabled")
-else()
-  message("++++++ PETSc:  disabled")
-endif()
-if(SERMENT_ENABLE_SLEPC)
-  message("++++++ SLEPc:  enabled")
-else()
-  message("++++++ SLEPc:  disabled")
-endif()
-if(SERMENT_ENABLE_SILO)
-  message("++++++ Silo:   enabled")
-else()
-  message("++++++ Silo:   disabled")
+  message("++++++ DBC:    disabled (because DBC in Detran is disabled)")
 endif()
 if(SERMENT_ENABLE_MPI)
   message("++++++ MPI:    enabled")
 else()
   message("++++++ MPI:    disabled")
 endif()
-if(SERMENT_ENABLE_BOOST)
-  message("++++++ Boost:  enabled")
-else()
-  message("++++++ Boost:  disabled")
-endif()
-
+message("---------------------------------------------------------------")
 
