Implemented Picard solver and a Steffensen eigenvalue update

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ INCLUDE_DIRECTORIES(comm)
 INCLUDE_DIRECTORIES(erme_geometry)
 INCLUDE_DIRECTORIES(erme_response)
 INCLUDE_DIRECTORIES(erme)
+INCLUDE_DIRECTORIES(erme_solvers)
 
 # Source subdirectories.
 ADD_SUBDIRECTORY(linear_algebra)
@@ -11,4 +12,5 @@ ADD_SUBDIRECTORY(comm)
 ADD_SUBDIRECTORY(erme_geometry)
 ADD_SUBDIRECTORY(erme_response)
 ADD_SUBDIRECTORY(erme)
+ADD_SUBDIRECTORY(erme_solvers)
 
