Updates in support of python interface

--- a/src/erme_utils/CMakeLists.txt
+++ b/src/erme_utils/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 #-------------------------------------#
 
 SET(SRC
-    Manager.cc
+    ManagerERME.cc
 )
 
 #-------------------------------------#
