Various bug fixes in solving and response loading

--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -11,7 +11,7 @@ message( "++ Adding erme_response tests." )
 ADD_EXECUTABLE(test_ResponseIndexer	           test_ResponseIndexer.cc)
 TARGET_LINK_LIBRARIES(test_ResponseIndexer     erme_response)
 
-ADD_EXECUTABLE(test_NodeResponse	           test_NodeResponse.cc)
+ADD_EXECUTABLE(test_NodeResponse	             test_NodeResponse.cc)
 TARGET_LINK_LIBRARIES(test_NodeResponse        erme_response)
 
 ADD_EXECUTABLE(test_ResponseServer	           test_ResponseServer.cc)
@@ -25,6 +25,13 @@ TARGET_LINK_LIBRARIES(test_ResponseDatabase    erme_response)
 #------------------------------------------------------------------------------#
 
 ADD_TEST(test_ResponseIndexer 	test_ResponseIndexer 0)
-ADD_TEST(test_NodeResponse 		test_NodeResponse 0)
-ADD_TEST(test_ResponseServer 	test_ResponseServer 0)
+ADD_TEST(test_NodeResponse 		  test_NodeResponse 0)
+ADD_TEST(test_ResponseServer 	  test_ResponseServer 0)
 ADD_TEST(test_ResponseDatabase  test_ResponseDatabase 0)
+
+#------------------------------------------------------------------------------#
+# Install
+#------------------------------------------------------------------------------#
+
+INSTALL_FILES(/include/${LIB_NAME} .hh)
+INSTALL_TARGETS(/lib ${LIB_NAME})
