Bug fixes for interpolation

--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -21,7 +21,7 @@ ADD_EXECUTABLE(test_ResponseDatabase           test_ResponseDatabase.cc)
 TARGET_LINK_LIBRARIES(test_ResponseDatabase    erme_response)
 
 ADD_EXECUTABLE(test_Interpolation              test_Interpolation.cc)
-TARGET_LINK_LIBRARIES(test_ResponseDatabase    erme_response)
+TARGET_LINK_LIBRARIES(test_Interpolation       erme_response)
 
 
 #------------------------------------------------------------------------------#
