Partial implementation of response source for detran

--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -23,6 +23,8 @@ TARGET_LINK_LIBRARIES(test_ResponseDatabase    erme_response)
 ADD_EXECUTABLE(test_Interpolation              test_Interpolation.cc)
 TARGET_LINK_LIBRARIES(test_Interpolation       erme_response)
 
+ADD_EXECUTABLE(test_ResponseSourceDetran         test_ResponseSourceDetran.cc)
+TARGET_LINK_LIBRARIES(test_ResponseSourceDetran  erme_response)
 
 #------------------------------------------------------------------------------#
 # Define tests
@@ -33,7 +35,7 @@ ADD_TEST(test_ResponseIndexerB      test_ResponseIndexer 1)
 ADD_TEST(test_NodeResponse          test_NodeResponse 0)
 ADD_TEST(test_ResponseServer        test_ResponseServer 0)
 ADD_TEST(test_ResponseDatabase      test_ResponseDatabase 0)
-
+ADD_TEST(test_ResponseSourceDetran      test_ResponseSourceDetran 0)
 #------------------------------------------------------------------------------#
 # Install
 #------------------------------------------------------------------------------#
