Working 1d sn with jacobi basis

--- a/src/erme_utils/CMakeLists.txt
+++ b/src/erme_utils/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 SET(SRC
     ManagerERME.cc
+    PostProcess.cc
 )
 
 #-------------------------------------#
