Adding things for plotting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,8 @@ if(SERMENT_ENABLE_PYTHON)
   find_package(PythonLibs REQUIRED)
   include_directories(${PYTHON_INCLUDE_PATH})
   include_directories(${PROJECT_BINARY_DIR}/config)
-  set(CMAKE_SWIG_FLAGS "-verbose")
+  #set(CMAKE_SWIG_FLAGS "-verbose")
+  set(CMAKE_SWIG_FLAGS "-v")
 endif()
 
 set(GPERFTOOLS_LIBRARIES "/home/robertsj/opt/gperftools/lib/libprofiler.so")
