--- a/src/erme_response/test/CMakeLists.txt
+++ b/src/erme_response/test/CMakeLists.txt
@@ -24,7 +24,7 @@ ADD_EXECUTABLE(test_Interpolation              test_Interpolation.cc)
 TARGET_LINK_LIBRARIES(test_Interpolation       erme_response)
 
 ADD_EXECUTABLE(test_ResponseSourceDetran         test_ResponseSourceDetran.cc)
-TARGET_LINK_LIBRARIES(test_ResponseSourceDetran  erme_response)
+TARGET_LINK_LIBRARIES(test_ResponseSourceDetran  erme_response linear_algebra)
 
 #------------------------------------------------------------------------------#
 # Define tests
